--- a/src/app/control-summary-card/control-summary-card.component.html
+++ b/src/app/control-summary-card/control-summary-card.component.html
@@ -1,11 +1,10 @@
 <div class="card">
-    <p class="title"><strong>Emp Name : </strong>John Doe</p>
+    <p class="title"><strong>Name : </strong>{{control.name}}</p>
     <div class="col-md-12 pad">
         <hr>
     </div>
     <div class="col-md-12 pad">
-        <span class="normalTxt item"><strong>Emp Id : </strong> 12345</span> | 
-        <span class="normalTxt item"><strong>Emp Id : </strong> 12345</span> | 
-        <span class="normalTxt item"><strong>Emp Id : </strong> 12345</span> 
+        <span class="normalTxt item"><strong>Id : </strong> {{control.id}}</span> | 
+        <span class="normalTxt item"><strong>AoA : </strong> {{control.aoa}}</span> | 
     </div>
 </div> 
